Update Course 9 - W3 - A1.ipynb

--- a/Course 9 - W3 - A1.ipynb
+++ b/Course 9 - W3 - A1.ipynb
@@ -69,6 +69,9 @@
       "source": [
         "# Load raw data from Wikipedia\n",
         "df = pd.read_html('https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M')[0]\n",
+        "# ==\n",
+        "# IMPORTANT: pandas has got a built-in function to parse HTML tables, so it makes a good fit for scrapping Wikipedia data. \n",
+        "# ==\n",
         "\n",
         "\n",
         "# Remove NA Boroughs\n",
